chore(Initial Structure): - Updated the README.md, module.json and package.json with some sensible initial values - Put a basic object structure in place for how I'm *guessing* crafting might work with Foundry - Log a simple test message to show that the module is doing something when added to a running game world in Foundry

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "foundry-typescript-template",
-  "version": "1.0.0",
-  "description": "Foundry VTT Typescript Template",
+  "name": "Fabricate",
+  "version": "0.0.1",
+  "description": "A system-agnostic, flexible crafting module for FoundryVT",
   "main": "index.js",
   "scripts": {
     "build": "gulp build"
   },
-  "author": "",
+  "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^4.0.2",
