--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-less": "^4.0.1",
     "gulp-typescript": "^6.0.0-alpha.1"
   },
   "dependencies": {
