--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "moduleResolution": "node",
     "target": "ES6",
     "lib": ["DOM", "ES6", "ES2017", "ES2018"],
-    "types": ["foundry-pc-types", "node"],
+    "types": ["foundry-pc-types", "node", "mocha"],
     "allowUmdGlobalAccess": true
   },
   "files": ["./gulpfile.ts"],
