--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-mocha": "^7.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "mocha": "^6.2.3",
+    "sinon": "^9.2.4",
     "ts-node": "^9.1.1"
   },
   "dependencies": {
