--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "target": "ES6",
     "lib": ["DOM", "ES6", "ES2017", "ES2018"],
     "types": ["foundry-pc-types", "node", "mocha"],
