feat(Inventory5E): - All tests for Inventory5E.ts pass - Implementation of Inventory5E.ts complete - Inventory loaded for actor on sheet open - Inventory updated when owned items deleted or added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "types": ["foundry-pc-types", "node", "mocha", "chai", "sinon"],
     "allowUmdGlobalAccess": true
   },
-  "include": ["./src/**/*.ts", "./src/global.d.ts"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["node_modules", "./gulpfile.ts"]
 }
