--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-webpack": "^1.5.0",
     "mocha": "^6.2.3",
+    "nyc": "^15.1.0",
     "sinon": "^9.2.4",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
