chore(5E Types): - Add simple item types for 5E

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "types": ["foundry-pc-types", "node", "mocha", "chai", "sinon", "handlebars"],
     "allowUmdGlobalAccess": true
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "global.d.ts"],
   "exclude": ["node_modules", "./gulpfile.ts"]
 }
