--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,10 @@
     "target": "ES6",
     "lib": ["DOM", "ES6", "ES2017", "ES2018"],
     "types": ["foundry-pc-types", "node", "mocha", "chai", "sinon", "handlebars"],
+    "typeRoots": ["./src/global.d.ts"],
     "allowUmdGlobalAccess": true
   },
-  "include": ["./src/**/*.ts", "global.d.ts"],
-  "exclude": ["node_modules", "./gulpfile.ts"]
+  "include": ["./src/**/*.ts", "./src/global.d.ts"],
+  "exclude": ["node_modules", "./gulpfile.ts"],
+  "files": ["./src/global.d.ts"]
 }
