--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "noErrorTruncation": true,
     "target": "ES6",
     "lib": ["DOM", "ES6", "ES2017", "ES2018"],
-    "types": ["foundry-pc-types", "node", "mocha", "chai", "sinon", "handlebars"],
+    "types": ["foundry-pc-types", "node", "mocha", "chai", "sinon", "handlebars", "dnd5e"],
     "typeRoots": [
       "./typings"
     ],
