--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
+    "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-3",
     "@types/chai": "^4.2.14",
     "@types/line-reader": "^0.0.32",
     "@types/mocha": "^8.2.0",
@@ -29,7 +30,6 @@
   },
   "dependencies": {
     "@types/node": "^14.10.1",
-    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
     "typescript": "^4.2.2"
   }
 }
