--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-3",
     "@types/chai": "^4.2.14",
+    "@types/jest": "^26.0.21",
     "@types/line-reader": "^0.0.32",
     "@types/mocha": "^8.2.0",
     "@types/sinon": "^9.0.10",
@@ -20,16 +21,18 @@
     "gulp-less": "^4.0.1",
     "gulp-mocha": "^7.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "jest": "^26.6.3",
     "line-reader": "^0.4.0",
     "mocha": "^6.2.3",
     "nyc": "^15.1.0",
     "sinon": "^9.2.4",
+    "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.13",
     "ts-node": "^9.1.1",
+    "typescript": "^4.2.2",
     "webpack-stream": "^6.1.2"
   },
   "dependencies": {
-    "@types/node": "^14.10.1",
-    "typescript": "^4.2.2"
+    "@types/node": "^14.10.1"
   }
 }
