--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "sourceMap": true,
     "noErrorTruncation": true,
     "target": "ES6",
-    "lib": ["DOM", "ES6", "ES2017", "ES2018"],
+    "lib": ["DOM", "ES6", "ES2017", "ES2018", "ES2019"],
     "types": ["node", "mocha", "chai", "sinon", "jest", "handlebars", "@league-of-foundry-developers/foundry-vtt-types"],
     "typeRoots": [
       "./typings"
