--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
+    "@league-of-foundry-developers/foundry-vtt-dnd5e-types": "^1.2.4-2",
     "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-3",
     "@types/chai": "^4.2.14",
     "@types/jest": "^26.0.21",
