--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "esModuleInterop": true,
     "allowJs": true,
     "baseUrl": "./",
-    "rootDir": "./src",
+    "rootDirs": ["./src","./test"],
     "outDir": "./dist",
     "strict": true,
     "strictNullChecks": false,
