refactor(Types Maintainability): - Implement all behavioural tests for Crafting Check and Crafting Check 5e - Improving Crafting Check efficiency - Brings total test suite coverage for V2 up to 81% - almost there!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "node",
       "chai",
       "sinon",
-      "jest",
+      "@jest/globals",
       "handlebars",
       "@league-of-foundry-developers/foundry-vtt-types",
       "@league-of-foundry-developers/foundry-vtt-dnd5e-types"
