--- a/package.json
+++ b/package.json
@@ -1,39 +1,76 @@
 {
+  "private": true,
   "name": "fabricate",
+  "title": "Fabricate",
+  "description": "A system-agnostic, flexible crafting module for FoundryVTT",
   "version": "0.5.6",
-  "description": "A system-agnostic, flexible crafting module for FoundryVT",
-  "main": "index.js",
   "scripts": {
-    "build": "gulp build",
-    "webpack": "webpack"
+    "package": "gulp package",
+    "build": "gulp build && gulp link",
+    "webpack": "webpack",
+    "build:watch": "gulp watch",
+    "clean": "gulp clean && gulp link --clean",
+    "update": "npm install --save-dev @league-of-foundry-developers/foundry-vtt-types@fvtt-0.8.9",
+    "lint": "eslint --ext .ts,.js,.vue .",
+    "lintfix": "eslint --fix --ext .ts,.js,.vue ./src",
+    "prettier-format": "prettier --config .prettierrc --write \"./src/**/*.(ts|js|json|scss|css)\""
   },
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-dnd5e-types": "^1.2.4-2",
-    "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-3",
+    "@league-of-foundry-developers/foundry-vtt-dnd5e-types": "^1.3.6-2",
+    "@league-of-foundry-developers/foundry-vtt-types": "^0.8.9-10",
     "@types/chai": "^4.2.14",
     "@types/jest": "^26.0.21",
+    "@types/jquery": "^3.5.9",
     "@types/line-reader": "^0.0.32",
     "@types/mocha": "^8.2.0",
     "@types/sinon": "^9.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
+    "archiver": "^5.2.0",
     "chai": "^4.2.0",
+    "chalk": "^4.1.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-jquery": "^3.0.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
+    "fs-extra": "^9.1.0",
     "gulp": "^4.0.2",
+    "gulp-changed": "^4.0.3",
+    "gulp-eslint": "^6.0.0",
+    "gulp-git": "^2.10.1",
     "gulp-less": "^4.0.1",
     "gulp-mocha": "^7.0.2",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.1",
     "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^26.6.3",
+    "json-stringify-pretty-compact": "^2.0.0",
     "line-reader": "^0.4.0",
     "mocha": "^6.2.3",
     "nyc": "^15.1.0",
+    "prettier": "^2.5.0",
+    "sass": "^1.44.0",
     "sinon": "^9.2.4",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.13",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2",
-    "webpack-stream": "^6.1.2"
+    "webpack-stream": "^6.1.2",
+    "yargs": "^15.4.1"
+  },
+  "lint-staged": {
+    "*.(ts|js)": "eslint --fix",
+    "*.(json|scss)": "prettier --write"
   },
   "dependencies": {
-    "@types/node": "^14.10.1"
+    "@types/node": "^14.10.1",
+    "typescript": "^4.5.2"
   }
 }
