--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,15 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowJs": true,
-    "baseUrl": "./",
-    "rootDirs": ["./src","./test"],
-    "outDir": "./dist",
-    "strict": true,
-    "strictNullChecks": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
-    "forceConsistentCasingInFileNames": true,
-    "sourceMap": true,
-    "noErrorTruncation": true,
-    "target": "ES6",
-    "lib": ["DOM", "ES6", "ES2017", "ES2018", "ES2019"],
-    "types": [
-      "node",
-      "chai",
-      "sinon",
-      "@jest/globals",
-      "handlebars",
-      "@league-of-foundry-developers/foundry-vtt-types",
-      "@league-of-foundry-developers/foundry-vtt-dnd5e-types"
-    ],
-    "typeRoots": [
-      "./typings"
-    ],
-    "allowUmdGlobalAccess": true
-  },
-  "include": ["./src/**/*.ts", "./typings/**/*.ts"],
-  "exclude": ["node_modules", "./gulpfile.ts"],
-  "files": [
-    "./typings/global.d.ts"
-  ],
-  "ts-node": {
-    "files": true,
-    "transpileOnly": true
-  }
+	"compilerOptions": {
+		"moduleResolution": "node",
+		"noEmit": false,
+		"strict": false,
+		"target": "es2020",
+		"lib": [
+			"DOM",
+			"ES6",
+			"ES2020"
+    	],
+		"types": ["@league-of-foundry-developers/foundry-vtt-types", "@league-of-foundry-developers/foundry-vtt-dnd5e-types"],
+		"strictNullChecks": true,
+	}
 }
