--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-dnd5e-types": "^1.3.6-2",
     "@league-of-foundry-developers/foundry-vtt-types": "^0.8.9-10",
     "@types/chai": "^4.2.14",
     "@types/jest": "^26.0.21",
@@ -48,6 +47,7 @@
     "gulp-less": "^4.0.1",
     "gulp-mocha": "^7.0.2",
     "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.3",
     "gulp-sass": "^4.1.1",
     "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^26.6.3",
@@ -56,7 +56,7 @@
     "mocha": "^6.2.3",
     "nyc": "^15.1.0",
     "prettier": "^2.5.0",
-    "sass": "^1.44.0",
+    "sass": "^1.48.0",
     "sinon": "^9.2.4",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.13",
