--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 			"ES6",
 			"ES2020"
     	],
-		"types": ["@league-of-foundry-developers/foundry-vtt-types"],
+		"types": ["@league-of-foundry-developers/foundry-vtt-types", "@league-of-foundry-developers/foundry-vtt-dnd5e-types"],
 		"strictNullChecks": true,
 	}
 }
