--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-dnd5e-types": "^1.5.2-2",
     "@league-of-foundry-developers/foundry-vtt-types": "^0.8.9-10",
     "@types/chai": "^4.2.14",
     "@types/jest": "^26.0.21",
     "@types/jquery": "^3.5.9",
     "@types/line-reader": "^0.0.32",
     "@types/mocha": "^8.2.0",
+    "@types/node": "^14.10.1",
     "@types/sinon": "^9.0.10",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -35,8 +35,8 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-jquery": "^3.0.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-tsdoc": "^0.2.14",
@@ -56,8 +56,8 @@
     "line-reader": "^0.4.0",
     "mocha": "^6.2.3",
     "nyc": "^15.1.0",
-    "prettier": "^2.5.0",
-    "sass": "^1.48.0",
+    "prettier": "^2.6.2",
+    "sass": "^1.50.0",
     "sinon": "^9.2.4",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.13",
@@ -71,7 +71,7 @@
     "*.(json|scss)": "prettier --write"
   },
   "dependencies": {
-    "@types/node": "^14.10.1",
-    "typescript": "^4.5.2"
+    "build": "^0.1.4",
+    "typescript": "^4.6.3"
   }
 }
