--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-dnd5e-types": "^1.2.4-2",
-    "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-3",
-    "@types/chai": "^4.2.14",
-    "@types/jest": "^26.0.21",
-    "@types/line-reader": "^0.0.32",
-    "@types/mocha": "^8.2.0",
-    "@types/sinon": "^9.0.10",
-    "chai": "^4.2.0",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@league-of-foundry-developers/foundry-vtt-dnd5e-types": "^1.5.2-2",
+    "@league-of-foundry-developers/foundry-vtt-types": "^9.269.0",
+    "@types/chai": "^4.3.3",
+    "@types/jest": "^28.1.6",
+    "@types/mocha": "^9.1.1",
+    "@types/sinon": "^10.0.13",
+    "babel-jest": "^28.1.3",
+    "chai": "^4.3.6",
     "gulp": "^4.0.2",
-    "gulp-less": "^4.0.1",
-    "gulp-mocha": "^7.0.2",
+    "gulp-less": "^5.0.0",
+    "gulp-mocha": "^8.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "jest": "^26.6.3",
-    "line-reader": "^0.4.0",
-    "mocha": "^6.2.3",
+    "jest": "^28.1.3",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "sinon": "^9.2.4",
-    "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.13",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.2",
-    "webpack-stream": "^6.1.2"
+    "sinon": "^14.0.0",
+    "ts-jest": "^28.0.7",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "@types/node": "^14.10.1"
+    "@types/node": "^18.7.3"
   }
 }
