--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-jest": "^28.1.3",
     "chai": "^4.3.6",
     "gulp": "^4.0.2",
+    "gulp-jest": "^4.0.4",
     "gulp-less": "^5.0.0",
     "gulp-mocha": "^8.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
