--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/sinon": "^10.0.13",
     "babel-jest": "^28.1.3",
     "chai": "^4.3.6",
+    "fancy-log": "^2.0.0",
     "gulp": "^4.0.2",
     "gulp-jest": "^4.0.4",
     "gulp-less": "^5.0.0",
