- install dependencies prior to build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - name: NPM Install
+        shell: bash
+        id: npm-install
+        run: npm install
+
       - name: Gulp build
         shell: bash
         id: gulp-build
