- add dependency from release on build!

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
+    needs:
+      build
     steps:
 
       - uses: actions/checkout@v2
