--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "fabricate",
-  "version": "0.5.6",
+  "version": "0.7.0",
   "description": "A system-agnostic, flexible crafting module for FoundryVT",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build",
-    "webpack": "webpack"
+    "releaseLocal": "node scripts/releaseLocal.js",
+    "build": "webpack build --mode=production --devtool=source-map && npm run compileLess && npm run copy",
+    "buildLocal": "webpack build --mode=development --devtool=eval-source-map && npm run compileLess && npm run copy",
+    "compileLess": "lessc src/styles/module.less dist/styles/module.css",
+    "test": "jest",
+    "coverageTest": "jest --collect-coverage --collect-coverage-from='./src/**/*.ts'",
+    "copy": "mkdir -p dist && npm run copyLanguages && npm run copyCompendia &&  npm run copyReadme && npm run copyManifest &&  npm run copyTemplates &&  npm run copyStyles &&  npm run copyAssets",
+    "copyLanguages": "mkdir -p dist/lang && cp -r src/lang/*.json dist/lang/",
+    "copyCompendia": "mkdir -p dist/packs && cp -r src/packs/* dist/packs/",
+    "copyReadme": "cp README.md dist/",
+    "copyManifest": "cp src/module.json dist/",
+    "copyTemplates": "mkdir -p dist/templates/partials && cp -r src/templates/*.hbs dist/templates/ && cp -r src/templates/partials/*.hbs dist/templates/partials/",
+    "copyAssets": "mkdir -p dist/assets && cp -r src/assets dist/"
   },
   "author": "Matthew Potts",
   "license": "MIT",
@@ -21,6 +32,7 @@
     "babel-jest": "^28.1.3",
     "chai": "^4.3.6",
     "fancy-log": "^2.0.0",
+    "fs-extra": "^10.1.0",
     "gulp": "^4.0.2",
     "gulp-jest": "^4.0.4",
     "gulp-less": "^5.0.0",
@@ -34,6 +46,7 @@
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
+    "webpack-cli": "^5.0.0",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
