--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "releaseLocal": "node scripts/releaseLocal.js",
-    "build": "webpack build --mode=production --devtool=source-map && npm run compileLess && npm run copy",
-    "buildLocal": "webpack build --mode=development --devtool=eval-source-map && npm run compileLess && npm run copy",
+    "build": "webpack build --mode=production --devtool=source-map && npm run compileLess && npm run buildDist",
+    "buildDev": "webpack build --mode=development --devtool=eval-source-map && npm run compileLess && npm run buildDist",
     "compileLess": "lessc src/styles/module.less dist/styles/module.css",
     "test": "jest",
     "coverageTest": "jest --collect-coverage --collect-coverage-from='./src/**/*.ts'",
-    "copy": "mkdir -p dist && npm run copyLanguages && npm run copyCompendia &&  npm run copyReadme && npm run copyManifest &&  npm run copyTemplates &&  npm run copyStyles &&  npm run copyAssets",
+    "buildDist": "mkdir -p dist && npm run copyLanguages && npm run copyCompendia &&  npm run copyReadme && npm run copyManifest &&  npm run copyTemplates &&  npm run copyStyles &&  npm run copyAssets",
     "copyLanguages": "mkdir -p dist/lang && cp -r src/lang/*.json dist/lang/",
     "copyCompendia": "mkdir -p dist/packs && cp -r src/packs/* dist/packs/",
     "copyReadme": "cp README.md dist/",
@@ -31,8 +31,8 @@
     "@types/sinon": "^10.0.13",
     "babel-jest": "^28.1.3",
     "chai": "^4.3.6",
+    "copyfiles": "^2.4.1",
     "fancy-log": "^2.0.0",
-    "fs-extra": "^10.1.0",
     "gulp": "^4.0.2",
     "gulp-jest": "^4.0.4",
     "gulp-less": "^5.0.0",
