--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build
         shell: bash
-        run: npm build
+        run: npm run build
 
       - uses: actions/upload-artifact@v3
         with:
