--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,17 +11,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - name: NPM Install
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install
         shell: bash
-        id: npm-install
         run: npm install
 
-      - name: Gulp build
+      - name: Test
         shell: bash
-        id: gulp-build
-        run: gulp build
+        run: npm run coverageTest
+
+      - name: Build
+        shell: bash
+        run: npm run build
 
       - uses: actions/upload-artifact@v3
         with:
@@ -44,29 +52,18 @@ jobs:
       - name: Get Version
         shell: bash
         id: get-version
-        run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
+        run: echo "$(node ./.github/scripts/get-version.js)" >> $GITHUB_OUTPUT
 
       # Get the name from 'module.json'
       - name: Get Includes
         shell: bash
         id: get-includes
-        run: echo "::set-output name=files::$(node ./.github/workflows/get-includes.js)"
+        run: echo "$(node ./.github/scripts/get-includes.js)" >> $GITHUB_OUTPUT
 
       # create a zip file with all files required by the module to add to the release
       - name: Zip Files
-        working-directory: ./dist #SORRY BUT YOU HAVE TO USE DIST JUST LIKE GET OVER IT OR FIGURE OUT A BETTER WAY
+        working-directory: ./dist
         run: zip -r ../module.zip ${{steps.get-includes.outputs.files}}
-
-      #Useful only for the template so we can leave the manifest and download urls empty
-      - name: Substitute Manifest and Download Links For Versioned Ones
-        id: sub_manifest_link_latest
-        uses: microsoft/variable-substitution@v1
-        with:
-          files: './dist/module.json'
-        env:
-          url: https://github.com/${{github.repository}}
-          manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-          download: https://github.com/${{github.repository}}/releases/latest/download/module.zip
 
       # Update the 'latest' release
       - name: Update Latest Release
