--- a/package.json
+++ b/package.json
@@ -21,33 +21,18 @@
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
     "@league-of-foundry-developers/foundry-vtt-dnd5e-types": "^1.5.2-2",
-    "@league-of-foundry-developers/foundry-vtt-types": "^9.269.0",
-    "@types/chai": "^4.3.3",
+    "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
     "@types/jest": "^28.1.6",
-    "@types/mocha": "^9.1.1",
     "@types/sinon": "^10.0.13",
-    "babel-jest": "^28.1.3",
-    "chai": "^4.3.6",
-    "fancy-log": "^2.0.0",
     "fs-extra": "^10.1.0",
-    "gulp": "^4.0.2",
-    "gulp-jest": "^4.0.4",
-    "gulp-less": "^5.0.0",
-    "gulp-mocha": "^8.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^28.1.3",
-    "mocha": "^10.0.0",
-    "nyc": "^15.1.0",
     "sinon": "^14.0.0",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "webpack-cli": "^5.0.0",
-    "webpack-stream": "^7.0.0"
+    "webpack-cli": "^5.0.0"
   },
   "dependencies": {
     "@types/node": "^18.7.3"
