--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/sinon": "^10.0.13",
     "fs-extra": "^10.1.0",
     "jest": "^28.1.3",
+    "less": "^4.1.3",
     "sinon": "^14.0.0",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
