--- a/package.json
+++ b/package.json
@@ -4,24 +4,15 @@
   "description": "A system-agnostic, flexible crafting module for FoundryVT",
   "main": "index.js",
   "scripts": {
-    "releaseLocal": "npm run test && npm run buildDev && node scripts/releaseLocal.js",
-    "build": "webpack build --mode=production --devtool=source-map && npm run compileLess && npm run buildDist",
-    "buildDev": "webpack build --mode=development --devtool=eval-source-map && npm run compileLess && npm run buildDist",
-    "compileLess": "lessc src/styles/module.less dist/styles/module.css",
+    "releaseLocal": "npm run test && npm run build && node scripts/releaseLocal.js",
+    "build": "vite build",
     "test": "jest",
-    "coverageTest": "jest --collect-coverage --collect-coverage-from='./src/**/*.ts'",
-    "buildDist": "mkdir -p dist && npm run copyLanguages & npm run copyCompendia & npm run copyReadme & npm run copyManifest &  npm run copyTemplates &  npm run copyAssets",
-    "copyLanguages": "mkdir -p dist/lang && cp -r src/lang/*.json dist/lang/",
-    "copyCompendia": "mkdir -p dist/packs && cp -r src/packs/* dist/packs/",
-    "copyReadme": "cp README.md dist/",
-    "copyManifest": "cp src/module.json dist/",
-    "copyTemplates": "mkdir -p dist/templates/partials && cp -r src/templates/*.hbs dist/templates/ && cp -r src/templates/partials/*.hbs dist/templates/partials/",
-    "copyAssets": "mkdir -p dist/assets && cp -r src/assets dist/"
+    "serve": "vite",
+    "coverageTest": "jest --collect-coverage --collect-coverage-from='./src/**/*.ts'"
   },
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-dnd5e-types": "^1.5.2-2",
     "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
     "@types/jest": "^28.1.6",
     "@types/sinon": "^10.0.13",
@@ -33,7 +24,7 @@
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "webpack-cli": "^5.0.0"
+    "vite": "^4.1.1"
   },
   "dependencies": {
     "@types/node": "^18.7.3"
