--- a/package.json
+++ b/package.json
@@ -3,27 +3,33 @@
   "version": "0.7.5",
   "description": "A system-agnostic, flexible crafting module for FoundryVT",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "releaseLocal": "npm run test && npm run build && node scripts/releaseLocal.js",
+    "releaseLocal": "npm run test && npm run build && node scripts/releaseLocal.cjs",
     "build": "vite build",
     "test": "jest",
     "serve": "vite",
-    "coverageTest": "jest --collect-coverage --collect-coverage-from='./src/**/*.ts'"
+    "coverageTest": "jest --collect-coverage --collect-coverage-from='./src/**/*.ts'",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
     "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
+    "@sveltejs/vite-plugin-svelte": "^2.0.2",
+    "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^28.1.6",
     "@types/sinon": "^10.0.13",
     "fs-extra": "^10.1.0",
     "jest": "^28.1.3",
     "less": "^4.1.3",
     "sinon": "^14.0.0",
+    "svelte": "^3.55.1",
+    "svelte-check": "^3.0.3",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
+    "typescript": "^4.9.3",
     "vite": "^4.1.1"
   },
   "dependencies": {
