--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -7,7 +7,9 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-gem "jekyll", "~> 4.3.2"
+
+gem "kramdown-parser-gfm"
+gem "jekyll", "~> 3.9.3"
 gem "webrick", "~> 1.7"
 gem "just-the-docs", "0.4.2"
 
