docs: End user documentation
- use github pages gem and run build on PR, deploy on push

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -5,6 +5,8 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -40,6 +42,7 @@ jobs:
 
   # Deployment job
   deploy:
+    if: github.ref == "refs/heads/main"
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
