--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -8,17 +8,16 @@ source "https://rubygems.org"
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
 
-gem "kramdown-parser-gfm", "~> 1.1.0"
 # gem "jekyll", "~> 3.9.3"
 gem "webrick", "~> 1.7"
 gem "just-the-docs", "0.4.2"
 
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
-gem "github-pages", group: :jekyll_plugins
+gem "github-pages", "228", group: :jekyll_plugins
 
 # If you have any plugins, put them here!
-gem "jekyll-github-metadata", ">= 2.15"
+# gem "jekyll-github-metadata", ">= 2.15"
 # group :jekyll_plugins do
 #   gem "jekyll-feed", "~> 0.12"
 # end
