--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -31,6 +31,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Install themes
+        run: cd docs && bundle install
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
