--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -40,8 +40,7 @@ jobs:
       - name: Install themes
         run: cd docs && bundle install
       - name: Build with Jekyll
-          # Outputs to the './_site' directory by default
-        run: cd docs && bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --destination ../_site
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --source ./docs --destination ./_site
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
