--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,4 +1,3 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll with GitHub Pages
 
 on:
@@ -6,9 +5,6 @@ on:
     branches:
       - main
   pull_request:
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -40,7 +36,7 @@ jobs:
       - name: Install themes
         run: cd docs && bundle install
       - name: Build with Jekyll
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --source ./docs --destination ./_site
+        run: cd docs && bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --destination ../_site
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
