--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install themes
         run: cd docs && bundle install
       - name: Build with Jekyll
-        run: cd docs && bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --destination ../_site
+        run: cd docs && bundle exec jekyll build --baseurl "${{ steps.setup-pages.outputs.base_path }}" --destination ../_site
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
