--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Pages
+        id: setup-pages
         uses: actions/configure-pages@v3
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
