--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ email: matt@misterpotts.uk
 description: >- 
   End user documentation for the Foundry Virtual Tabletop (VTT) Module, "Fabricate".
   Fabricate is a system-agnostic, flexible crafting module for Foundry VTT.
-baseurl: ""
+baseurl: "/fabricate"
 url: https://misterpotts.github.io
 github_username:  misterpotts
 
