--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.191",
     "@types/sinon": "^10.0.13",
     "fs-extra": "^10.1.0",
     "jest": "^28.1.3",
     "less": "^4.1.3",
+    "lodash": "^4.17.21",
     "sinon": "^14.0.0",
     "svelte": "^3.55.1",
     "svelte-check": "^3.0.3",
