--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "noErrorTruncation": true,
-    "target": "ES6",
-    "lib": ["DOM", "ES6", "ES2017", "ES2018", "ES2019"],
+    "target": "ES2021",
+    "lib": ["ES2022"],
     "types": [
       "node",
       "sinon",
