--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "sourceMap": true,
     "noErrorTruncation": true,
     "target": "ES2021",
-    "lib": ["ES2022"],
+    "lib": [
+      "ES2022",
+      "dom"
+    ],
     "types": [
       "node",
       "sinon",
