defect: Svelte preprocess is not running
- returns league types to `package.json` and `tsconfig.json`
- these will be removed in a later PR

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "sinon",
       "jest",
       "svelte",
+      "@league-of-foundry-developers/foundry-vtt-types",
       "jquery"
     ],
     "typeRoots": [
