Feat: Skeleton UI For Actor Crafting App (Patron pre-release feature) (#200)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fabricate",
-  "version": "0.10.5",
+  "version": "0.10.6",
   "description": "A system-agnostic, flexible crafting module for FoundryVT",
   "main": "index.js",
   "type": "module",
@@ -16,6 +16,8 @@
   "author": "Matthew Potts",
   "license": "MIT",
   "devDependencies": {
+    "@skeletonlabs/skeleton": "^2.3.0",
+    "@skeletonlabs/tw-plugin": "^0.2.2",
     "@sveltejs/vite-plugin-svelte": "^2.4.6",
     "@tsconfig/svelte": "^5.0.2",
     "@types/jest": "^29.5.5",
